<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">geekhub</string>
    <string name="confirm">Confirm</string>
    <string name="ageText">Enter age:</string>
    <string name="nameText">Enter name:</string>
    <string name="viewResult">View result</string>
    <string name="defaultAge">20</string>
    <string name="defaultName">Sanya</string>
    <string name="next">Next</string>
    <string name="animation">Анимация</string>
    <string name="result">Результат</string>
    <string name="hello_world">Hello World</string>
    <string name="open_drawer">Opened</string>
    <string name="close_drawer">Closed</string>

    <string-array name="planets_array">
         <item>Enter name</item>
         <item>Enter age</item>
         <item>View result</item>
         <item>Animations</item>
    </string-array>

</resources>
