<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:onClick="onClick"
            android:longClickable="true">
        <TextView android:layout_width="wrap_content" android:layout_height="40dp" android:text="@string/ageText"
                  android:id="@+id/textView1" android:layout_gravity="center_horizontal|top" android:textSize="25dp"
                  android:textColor="#010100"/>
        <EditText
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:id="@+id/editAge" android:layout_gravity="center" android:inputType="number"
                android:maxLength="2"/>
        <Button
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/ageButton" android:layout_gravity="center" android:onClick="onClick"/>
        <TextView android:layout_width="84dp" android:layout_height="27dp" android:id="@+id/ageView"
                  android:layout_gravity="center" android:focusable="false" android:clickable="false"
                  android:singleLine="true" android:textColor="#010100" android:text="@string/defaultAge"/>
    </LinearLayout>
</LinearLayout>