<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:onClick="onClick"
            android:longClickable="true">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/nameText"
                android:id="@+id/textView1" android:layout_gravity="center" android:textSize="25dp"
                android:textColor="#010100"/>
        <EditText android:layout_width="130dp" android:layout_height="40dp" android:id="@+id/editName"
                  android:layout_gravity="center" android:editable="true" android:maxLines="2" android:maxLength="10"
                  android:inputType="text"/>
        <Button
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:text="@string/confirm"
                android:id="@+id/nameButton" android:layout_gravity="center" android:onClick="onClick"
                android:longClickable="true"/>
        <TextView
                android:layout_width="101dp"
                android:layout_height="42dp"
                android:id="@+id/nameView" android:layout_gravity="center" android:focusable="false"
                android:maxLength="10" android:maxLines="2" android:text="@string/defaultName"
                android:textColor="#010100"/>
    </LinearLayout>
</LinearLayout>